implementacion del startNewGame